added jumbotron and form to html

--- a/index.html
+++ b/index.html
@@ -4,13 +4,41 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="main.css">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1"
+      crossorigin="anonymous"
+    />
   <title>Document</title>
 </head>
 <body>
   
+  <!-- jumbotron -->
+  <div class="jumbotron jumbotron-fluid justify-content-center text-center row align-items-center mt-5">
+    <h1 class="display-4">Welcome to Hogwarts!</h1>
+    <p class="lead mt 3">Let's begin the process!</p>
+    <hr class="my-4">
+    <p>
+      <a class="btn btn-primary btn-lg mt-3" href="#" role="button">Let's Start Sorting</a>
+    </p>
+  </div>
+
+<!-- student name form and button -->
+<form id="name-form">
+  <div class="text-center">
+    <input type="text" class="form-control mt-2" id="name" placeholder="Enter your name" required />
+    <a class="btn btn-info btn-lg mt-4" href="#" role="button">Let's see what you get!</a>
+  </div>
+  </form>
+
+<!-- card -->
 
 
-  
+  <script
+     src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"
+     integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW"
+     crossorigin="anonymous"
+   ></script>
   <script src="main.js"></script>
 </body>
 </html>
