made card pop to dom

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   
-  <div class="container">
+ 
 
   <!-- jumbotron -->
   <div class="jumbotron">
@@ -22,16 +22,15 @@
       <button type="button" class="btn btn-primary btn-lg" role="button" id="btn">Let's Start Sorting!</button>
     </p>
   </div>
-<br>
-<br>
-<br>
+
 <!-- student name form and button -->
-<div class="d-flex flex-wrap justify-content-evenly" id="form"></div>
+<div class="d-flex flex-wrap justify-content-center" id="form"></div>
 
 <!--  student card -->
-<div class="d-flex flex-wrap justify-content-evenly" id="students"></div>
-
+<div class="card-container">
+<div class="d-flex flex-wrap justify-content-center" id="students"></div>
 </div>
+
 
 
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
