created Voldemort's Army card

--- a/index.html
+++ b/index.html
@@ -24,14 +24,16 @@
   </div>
 
 <!-- student name form and button -->
+<div class="card-container2">
 <div class="d-flex flex-wrap justify-content-center" id="form"></div>
-
+</div>
 <!--  student card -->
 <div class="card-container">
 <div class="d-flex flex-wrap justify-content-center" id="students"></div>
 </div>
 
-
+<!-- army card -->
+<div class="d-flex flex-wrap justify-content-center" id="army"></div>
 
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous"></script>
