added css and readme

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
  
 
   <!-- jumbotron -->
-  <div class="jumbotron">
+  <div class="jumbotron" id="jumbo">
     <h1 class="display-4">Welcome to Hogwarts!</h1>
     <p class="lead">Your house will be chosen for you.</p>
     <p class="lead">Prefect’s bathroom Trelawney veela squashy armchairs, SPEW: Gamp’s Elemental Law of Transfiguration. Magic Nagini bezoar, Hippogriffs Headless Hunt giant squid petrified. Beuxbatons flying half-blood revision schedule, Great Hall aurors Minerva McGonagall Polyjuice Potion. Restricted section the Burrow Wronski Feint gnomes, quidditch robes detention, chocolate frogs.
