--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
+  
+  
+  
   <link rel="stylesheet" href="main.css">
   <title>Sorting Hat</title>
 </head>
@@ -12,7 +15,7 @@
  
 
   <!-- jumbotron -->
-  <div class="jumbotron" id="jumbo">
+  <div class="jumbotron" id="jumbotron">
     <h1 class="display-4">Welcome to Hogwarts!</h1>
     <p class="lead">Your house will be chosen for you.</p>
     <p class="lead">Prefect’s bathroom Trelawney veela squashy armchairs, SPEW: Gamp’s Elemental Law of Transfiguration. Magic Nagini bezoar, Hippogriffs Headless Hunt giant squid petrified. Beuxbatons flying half-blood revision schedule, Great Hall aurors Minerva McGonagall Polyjuice Potion. Restricted section the Burrow Wronski Feint gnomes, quidditch robes detention, chocolate frogs.
